tests/baselines/reference/ES5For-of27.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of27.ts(1,11): error TS2459: Type 'number' has no property 'x' and no string index signature.
tests/cases/conformance/statements/for-ofStatements/ES5For-of27.ts(1,21): error TS2459: Type 'number' has no property 'y' and no string index signature.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of27.ts (2 errors) ====
    for (var {x: a = 0, y: b = 1} of [2, 3]) {
              ~
!!! error TS2459: Type 'number' has no property 'x' and no string index signature.
                        ~
!!! error TS2459: Type 'number' has no property 'y' and no string index signature.
        a;
        b;
    }